--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
     <!-- css stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="E:\Tindog project with html,css,bootstrap\CSS\styles.css">
+    <link rel="stylesheet" href="CSS\styles.css">
     <!-- font awesome website for icons embedding -->
     <script defer src="https://pro.fontawesome.com/releases/v5.10.0/js/all.js" integrity="sha384-G/ZR3ntz68JZrH4pfPJyRbjW+c0+ojii5f+GYiYwldYU69A+Ejat6yIfLSxljXxD" crossorigin="anonymous"></script>
     
@@ -55,7 +55,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button "><span class="fab fa-google-play"></span> Download</button>
         </div>
         <div class="col-lg-6 position-relative">
-          <img src="E:\Tindog project with html,css,bootstrap\images\iphone6.png" class="dogimg" alt="iphone">
+          <img src="images\iphone6.png" class="dogimg" alt="iphone">
       </div>
     </div> 
     </section>
